further refinement of IT test goals